# journal-alerts

./: Cargo.toml  README.md  build.rs
.github/workflows/: lint.yml  quality.yml
deploy/: config.example.toml  journal-alerts.service
src/: config.rs  main.rs  matcher.rs  slack.rs
src/processor/: core.rs  matcher.rs  mod.rs
