[package]
name = "journal-alerts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dashmap = { version = "6.1.0", features = ["serde"] }
env_logger = "0.11"
flume = "0.11.1"
log = "0.4.28"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
